nixidy/generated/prod/maintainerr/Deployment-maintainerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: maintainerr
  name: maintainerr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: maintainerr
      app.kubernetes.io/instance: maintainerr
      app.kubernetes.io/name: maintainerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: maintainerr
        app.kubernetes.io/instance: maintainerr
        app.kubernetes.io/name: maintainerr
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/maintainerr/maintainerr:3.30.1@sha256:8251a1f0ba5d71acc878846a727fba566ec87cbfbf6a914fb881a5953af53d46
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6246
            timeoutSeconds: 1
          name: maintainerr
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6246
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6246
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /opt/data
              name: config
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      serviceAccountName: maintainerr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: maintainerr
        - emptyDir: {}
          name: tmpfs
