nixidy/generated/prod/maintainerr/Service-maintainerr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/service: maintainerr
  name: maintainerr
  namespace: media
spec:
  ports:
    - name: http
      port: 6246
      protocol: TCP
      targetPort: 6246
  selector:
    app.kubernetes.io/controller: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
  type: ClusterIP
